making cart work

--- a/ecom-webapp/src/components/UI/Modal.module.css
+++ b/ecom-webapp/src/components/UI/Modal.module.css
@@ -9,8 +9,8 @@
 }
 
 .modal {
-  position: fixed;
-  top: 20vh;
+  position:absolute ;
+  top: 13vh;
   left: 5%;
   width: 90%;
   background-color: white;
