--- a/ecom-webapp/src/components/Cart/Cart.module.css
+++ b/ecom-webapp/src/components/Cart/Cart.module.css
@@ -10,7 +10,23 @@
     margin: 0px;
     padding: 0px;
 }
-
+.cancel {
+    position: absolute;
+    cursor: pointer;
+    color: rgb(121, 117, 117);
+    top: 0px;
+    right: 0px;
+    font-size: 16px;
+    font-weight: 700;
+    margin: 20px;
+    background: none;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(121, 117, 117);
+    border-image: initial;
+    border-radius: 7px;
+    padding: 5px;
+}
 .total {
   display: flex;
   justify-content: space-between;
